samples/_failures_safe/1761688881_eda9aa_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_f30ebc84.c: In function ‘main’:
./samples/SAFE/__tmp_f30ebc84.c:130:5: error: expected expression at end of input
  130 |     if (!read_size_t("Enter cols: ", &cols))
      |     ^~
./samples/SAFE/__tmp_f30ebc84.c:130:5: error: expected declaration or statement at end of input
